namespace MoveMate.Models.Dto;

public class LoginRequest {
	public string Email { get; set; } = "";
	public string Password { get; set; } = "";
}